syntax = "proto3";

package grpc_todo.shared_kernel.protos.tasks.requests;

message TaskCreateRequest {
    string accessToken = 1;
    string name = 2;
}

message TaskListRequest {
    string accessToken = 1;
}

message TaskDeleteRequest {
    string accessToken = 1;
    string taskId = 2;
}