syntax = "proto3";

import "task/requests.proto";
import "task/responses.proto";

package grpc_todo.shared_kernel.protos.tasks;


service TaskItem {
    rpc Create(requests.TaskCreateRequest) returns (responses.TaskCreateResponse);
    rpc Delete(requests.TaskDeleteRequest) returns (responses.TaskDeleteResponse);
    rpc ListAll(requests.TaskListRequest) returns (responses.TaskListResponse);
}
